<resources>
    <string name="app_name">Event App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name">EVENT NAME</string>
    <string name="city">EVENT CITY</string>
    <string name="id">EVENT ID</string>
    <string name="venue">EVENT VENUE</string>
    <string name="info">EVENT INFO</string>
    <string name="date">EVENT DATE</string>
    <string name="search">Search</string>
    <string name="search_city">Enter City to be Searched</string>
    <string name="image_desc">Image to Display on APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="add_event_id">Enter Event Id:</string>
    <string name="add_event_name">Enter Event Name:</string>
    <string name="add_event_info">Enter Event Info:</string>
    <string name="add_event_date">Enter Event Date(YYYY-MM-DD)</string>
    <string name="add_event_venue">Enter Event Venue</string>
    <string name="add_event_city">Enter Event City</string>
    <string name="action_add">Add</string>
    <string name="selectdate">Select date</string>
</resources>
