<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_event_id"
            android:hint="@string/add_event_id" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_event_name"
            android:hint="@string/add_event_name"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_event_info"
            android:hint="@string/add_event_info"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_event_date"
                    android:hint="@string/add_event_date"/>

                <ImageButton
                    android:id="@+id/calenderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/selectdate"
                    android:src="@drawable/ic_event_black_24dp"
                    android:layout_alignBottom="@+id/add_event_date"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="4dp"/>

            </RelativeLayout>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_event_venue"
            android:hint="@string/add_event_venue"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_event_city"
            android:hint="@string/add_event_city"/>
    </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add"
            android:textSize="@dimen/text_size"
            android:textColor="@color/button_text"
            android:id="@+id/submit"
            android:paddingLeft="@dimen/text_size"
            android:paddingRight="@dimen/text_size"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/text_margin"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TableRow android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="right">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_head"
                    android:layout_weight="1"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/left_margin"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/read_name"
                    android:layout_weight="3"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    />
            </TableRow>




            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_head"
                    android:layout_weight="1"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/left_margin"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/read_info"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_weight="3"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_head"
                    android:layout_weight="1"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/left_margin"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/read_date"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_weight="3"
                    />
            </TableRow
                >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/venue_head"
                    android:layout_weight="1"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/left_margin"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/read_venue"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_weight="3"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/city_head"
                    android:layout_weight="1"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/left_margin"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/read_city"
                    android:textSize="@dimen/read_text_size"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_weight="3"
                    />
            </TableRow>

        </TableLayout>
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/read_name"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/read_info"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/read_date"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/read_venue"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/read_city"-->
            <!--/>-->

    </LinearLayout>
</ScrollView>